tests/baselines/reference/lateBoundDestructuringImplicitAnyError.errors.txt
tests/cases/compiler/lateBoundDestructuringImplicitAnyError.ts(2,15): error TS7017: Element implicitly has an 'any' type because type '{ prop: string; }' has no index signature.
tests/cases/compiler/lateBoundDestructuringImplicitAnyError.ts(12,15): error TS7015: Element implicitly has an 'any' type because index expression is not of type 'number'.
tests/cases/compiler/lateBoundDestructuringImplicitAnyError.ts(20,6): error TS2459: Type '{ [idx: number]: string; }' has no property '[symed]' and no string index signature.


==== tests/cases/compiler/lateBoundDestructuringImplicitAnyError.ts (3 errors) ====
    let named = "foo";
    let {[named]: prop} = {prop: "foo"};
                  ~~~~
!!! error TS7017: Element implicitly has an 'any' type because type '{ prop: string; }' has no index signature.
    void prop;
    
    const numIndexed: {[idx: number]: string} = null as any;
    const strIndexed: {[idx: string]: string} = null as any;
    
    let numed = 6;
    
    const symed = Symbol()
    
    let {[named]: prop2} = numIndexed;
                  ~~~~~
!!! error TS7015: Element implicitly has an 'any' type because index expression is not of type 'number'.
    void prop2;
    let {[numed]: prop3} = numIndexed;
    void prop3;
    let {[named]: prop4} = strIndexed;
    void prop4;
    let {[numed]: prop5} = strIndexed;
    void prop5;
    let {[symed]: prop6} = numIndexed;
         ~~~~~~~
!!! error TS2459: Type '{ [idx: number]: string; }' has no property '[symed]' and no string index signature.
    void prop6;
    let {[symed]: prop7} = strIndexed;
    void prop7;
    